--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,19 +1,29 @@
 $gordon-blue: #014983;
 $text-color: #fff;
 
+.horizontal-center {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
 @font-face {
   font-family: 'Open Sans';
   font-weight: 700;
   src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
 }
-
+// Override default background color
 .view.gordon-blue-background,
 .pane.gordon-blue-background {
   background-color: $gordon-blue;
 }
+// Override default font sizes
 .scroll-content {
-  h1 { font-size: 15rem; }
-  h2 { font-size: 2.6rem; }
+  color: $text-color;
+  h1 { font-size: 75vw; line-height: 1; }
+  h2 { font-size: 10vw; }
   h1, h2 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
@@ -21,48 +31,102 @@ $text-color: #fff;
     color: $text-color;
   }
 }
+// Main (chapel credit) page styles
 .main-content {
   .chapel-loader-container {
     .gordon-chapel {
-      margin-top: 7em;
-      height: 30em;
-      -webkit-animation: fill-cycle 1s infinite alternate;
-              animation: fill-cycle 1s infinite alternate;
+      margin-top: 10%;
+      margin-bottom: -1.1rem;
+      height: 20em;
+      -webkit-animation: fade 1s infinite alternate;
+              animation: fade 1s infinite alternate;
     }
   }
   .text-container {
-    margin-top: 8rem;
+    margin-top: 15%;
+    margin-left: 1em;
+    margin-right: 1em;
     .chapel-message {
       margin-top: 14rem;
     }
   }
 }
+// Make Modal only cover part of the screen
+.modal-backdrop { top: 50%; }
+// Override bar-header height change in iOS modal
+.platform-ios.platform-cordova:not(.fullscreen) {
+  .modal {
+    .bar-header:not(.bar-subheader) {
+      height: $bar-height;
+
+      > * {
+        margin-top: 0;
+      }
+    }
+    // ion-content push
+    .has-header {
+      top: $bar-height;
+    }
+  }
+}
+// Login page styles
 .login-content {
   .gordon-chapel {
-    margin-top: 2rem;
-    height: 15rem;
+    @extend .horizontal-center;
+    width: 34vw;
+    margin-top: 1rem;
   }
   .login-title {
     margin-top: 0;
+    text-align: center;
   }
-  .login-info {
-    margin-left: 3%;
-    margin-top: 50px;
-    margin-bottom: -15px;
-    color: #fff;
-    font-size: 1.2em;
-    font-family: sans-serif;
-  }
-  .login-button {
-    width: 95%;
+  .login-form {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+    .item {
+      margin-top: 5px;
+      margin-bottom: 5px;
+      &.has-error {
+        border-bottom: 2px solid red;
+        .input-label {
+          color: red;
+        }
+      }
+      &.valid {
+        border-bottom: 2px solid green;
+        .input-label {
+          color: green;
+        }
+      }
+    }
+    .login-info {
+      margin-top: 2rem;
+      font-size: 1.2rem;
+      font-family: sans-serif;
+    }
+    .login-errors {
+      margin-left: 1rem;
+      text-align: left;
+      font-weight: 500;
+      color: red;
+      &.ng-hide {
+        visibility: hidden;
+        display: block !important;
+      }
+    }
+    .login-button {
+      @extend .horizontal-center;
+      width: 75%;
+    }
   }
 }
 
-@-webkit-keyframes fill-cycle {
+// Loader animation (fade in and out)
+@-webkit-keyframes fade {
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
-@keyframes fill-cycle {
+@keyframes fade {
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
