--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7014,3 +7014,103 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+.horizontal-center, .login-content .gordon-chapel, .login-content .login-form .login-button {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%); }
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  src: url('/fonts/OpenSans-Bold.ttf') format('truetype'); }
+
+.view.gordon-blue-background, .pane.gordon-blue-background {
+  background-color: #014983; }
+
+.scroll-content {
+  color: #fff; }
+  .scroll-content h1 {
+    font-size: 75vw;
+    line-height: 1; }
+  .scroll-content h2 {
+    font-size: 10vw; }
+  .scroll-content h1, .scroll-content h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff; }
+
+.main-content .chapel-loader-container .gordon-chapel {
+  margin-top: 10%;
+  margin-bottom: -1.1rem;
+  height: 20em;
+  -webkit-animation: fade 1s infinite alternate;
+  animation: fade 1s infinite alternate; }
+.main-content .text-container {
+  margin-top: 15%;
+  margin-left: 1em;
+  margin-right: 1em; }
+  .main-content .text-container .chapel-message {
+    margin-top: 14rem; }
+
+.modal-backdrop {
+  top: 50%; }
+
+.platform-ios.platform-cordova:not(.fullscreen) .modal .bar-header:not(.bar-subheader) {
+  height: 44px; }
+  .platform-ios.platform-cordova:not(.fullscreen) .modal .bar-header:not(.bar-subheader) > * {
+    margin-top: 0; }
+.platform-ios.platform-cordova:not(.fullscreen) .modal .has-header {
+  top: 44px; }
+
+.login-content .gordon-chapel {
+  width: 34vw;
+  margin-top: 1rem; }
+.login-content .login-title {
+  margin-top: 0;
+  text-align: center; }
+.login-content .login-form {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem; }
+  .login-content .login-form .item {
+    margin-top: 5px;
+    margin-bottom: 5px; }
+    .login-content .login-form .item.has-error {
+      border-bottom: 2px solid red; }
+      .login-content .login-form .item.has-error .input-label {
+        color: red; }
+    .login-content .login-form .item.valid {
+      border-bottom: 2px solid green; }
+      .login-content .login-form .item.valid .input-label {
+        color: green; }
+  .login-content .login-form .login-info {
+    margin-top: 2rem;
+    font-size: 1.2rem;
+    font-family: sans-serif; }
+  .login-content .login-form .login-errors {
+    margin-left: 1rem;
+    text-align: left;
+    font-weight: 500;
+    color: red; }
+    .login-content .login-form .login-errors.ng-hide {
+      visibility: hidden;
+      display: block !important; }
+  .login-content .login-form .login-button {
+    width: 75%; }
+
+@-webkit-keyframes fade {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+@keyframes fade {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
