--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,31 @@
 $gordon-blue: #014983;
 $text-color: #fff;
 
+.center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: stretch;
+  -ms-flex-line-pack: stretch;
+  align-content: stretch;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
 .horizontal-center {
   position: relative;
   left: 50%;
@@ -35,7 +60,6 @@ $text-color: #fff;
 .main-content {
   .chapel-loader-container {
     .gordon-chapel {
-      margin-top: 10%;
       margin-bottom: -1.1rem;
       height: 20em;
       -webkit-animation: fade 1s infinite alternate;
@@ -43,12 +67,8 @@ $text-color: #fff;
     }
   }
   .text-container {
-    margin-top: 15%;
     margin-left: 1em;
     margin-right: 1em;
-    .chapel-message {
-      margin-top: 14rem;
-    }
   }
 }
 // Make Modal only cover part of the screen
