--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7015,6 +7015,31 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: stretch;
+  -ms-flex-line-pack: stretch;
+  align-content: stretch;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
 .horizontal-center, .login-content .gordon-chapel, .login-content .login-form .login-button {
   position: relative;
   left: 50%;
@@ -7044,17 +7069,13 @@ a.button {
     color: #fff; }
 
 .main-content .chapel-loader-container .gordon-chapel {
-  margin-top: 10%;
   margin-bottom: -1.1rem;
   height: 20em;
   -webkit-animation: fade 1s infinite alternate;
   animation: fade 1s infinite alternate; }
 .main-content .text-container {
-  margin-top: 15%;
   margin-left: 1em;
   margin-right: 1em; }
-  .main-content .text-container .chapel-message {
-    margin-top: 14rem; }
 
 .modal-backdrop {
   top: 50%; }
