--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,39 +1,6 @@
 $gordon-blue: #014983;
 $text-color: #fff;
 
-.center {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-align-content: stretch;
-  -ms-flex-line-pack: stretch;
-  align-content: stretch;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.horizontal-center {
-  position: relative;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
 @font-face {
   font-family: 'Open Sans';
   font-weight: 700;
@@ -55,21 +22,7 @@ $text-color: #fff;
     color: $text-color;
   }
 }
-// Main (chapel credit) page styles
-.main-content {
-  .chapel-loader-container {
-    .gordon-chapel {
-      margin-bottom: -1.1rem;
-      height: 20em;
-      -webkit-animation: fade 1s infinite alternate;
-              animation: fade 1s infinite alternate;
-    }
-  }
-  .text-container {
-    margin-left: 1em;
-    margin-right: 1em;
-  }
-}
+
 // Add border to bottom of bar for advertisement
 .menu-bar.bar-footer {
   border-bottom: 1px solid #ddd;
@@ -99,58 +52,6 @@ $text-color: #fff;
     }
   }
 }
-// Login page styles
-.login-content {
-  .gordon-chapel {
-    @extend .horizontal-center;
-    width: 34vw;
-    margin-top: 1rem;
-  }
-  .login-title {
-    margin-top: 0;
-    text-align: center;
-  }
-  .login-form {
-    margin-left: 0.75rem;
-    margin-right: 0.75rem;
-    .item {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      &.has-error {
-        border-bottom: 2px solid red;
-        .input-label {
-          color: red;
-        }
-      }
-      &.valid {
-        border-bottom: 2px solid green;
-        .input-label {
-          color: green;
-        }
-      }
-    }
-    .login-info {
-      margin-top: 2rem;
-      font-size: 1.2rem;
-      font-family: sans-serif;
-      color: $text-color;
-    }
-    .login-errors {
-      margin-left: 1rem;
-      text-align: left;
-      font-weight: 500;
-      color: red;
-      &.ng-hide {
-        visibility: hidden;
-        display: block !important;
-      }
-    }
-    .login-button {
-      @extend .horizontal-center;
-      width: 75%;
-    }
-  }
-}
 
 // Loader animation (fade in and out)
 @-webkit-keyframes fade {
@@ -161,3 +62,9 @@ $text-color: #fff;
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
+@import "chapelcredit";
+@import "home";
+@import "login";
+@import "mealpoints";
+@import "utility";
