Disable underline on all <a> elements

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -53,6 +53,9 @@ $text-color: #fff;
     }
   }
 }
+a {
+  text-decoration: none;
+}
 
 // Loader animation (fade in and out)
 @-webkit-keyframes fade {
