--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 $gordon-blue: #014983;
 $meal-points-orange: #F2A42C;
 $text-color: #fff;
+$muted-gray: #838C8D;
 
 @font-face {
   font-family: 'Open Sans';
