--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,7 +6,7 @@ $muted-gray: #838C8D;
 @font-face {
   font-family: 'Open Sans';
   font-weight: 700;
-  src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
+  src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
 }
 // Override default background color
 .view.gordon-blue-background,
