Add variable overrides for popover dimensions

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,6 +15,10 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+
+$popover-width: 275px;
+$popover-height: 175px;
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
