--- a/scss/app.scss
+++ b/scss/app.scss
@@ -26,7 +26,8 @@ body {
 .scroll-content {
   h1 { font-size: 20vw; line-height: 1; }
   h2 { font-size: 10vw; }
-  h1, h2 {
+  h3 { font-size: 6vw; }
+  h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
