Add keyframes import, move 'fade' from app.scss into keyframes.scss

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -85,21 +85,7 @@ a:visited {
   text-decoration: none;
 }
 
-.loading {
-  -webkit-animation: fade 1s infinite alternate;
-          animation: fade 1s infinite alternate;
-}
-
-// Loader animation (fade in and out)
-@-webkit-keyframes fade {
-  0% { opacity: 1; }
-  100% { opacity: 0; }
-}
-@keyframes fade {
-  0% { opacity: 1; }
-  100% { opacity: 0; }
-}
-
+@import "keyframes";
 @import "animations";
 @import "home";
 @import "login";
