Change button animation to be on contents, not button itself
Should make it less jarring on app load

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -9,14 +9,14 @@
 .grade-b {
 
   // Main buttons slide in from either side
-  .chapel-credit-button,
-  .meal-points-button {
+  .chapel-credit-button > *,
+  .meal-points-button > * {
     @extend .animated;
   }
-  .chapel-credit-button {
+  .chapel-credit-button > * {
     @extend .slideInLeft;
   }
-  .meal-points-button {
+  .meal-points-button > * {
     @extend .slideInRight;
   }
 
