--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -3,6 +3,8 @@
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 }
 
 .animated.infinite {
