Modularize interface (resolves #2)
- Abstract info modules into reusable infoModule directive which
encapsulates data access and styling
- Add mechanism for storing and retrieving module configurations
- Add set of default modules to constants
- Update markup in home.html to use new <info-module> directives
- Remove "Out of" total credit on chapel credits module
- Add ModuleService
- Add interactionModule for future usage

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,29 +1,18 @@
 .home-content {
-  .scroll {
-    width: 100%;
+  .scroll,
+  .button {
     height: 100%;
   }
-  .button {
-    height: 50%;
-    margin: 0;
-    border: 0;
-    &.chapel-credit-button {
-      background-color: $gordon-blue;
-    }
-    &.meal-points-button {
-      background-color: $meal-points-orange;
-    }
+  .scroll,
+  .button,
+  info-module,
+  .module-content {
+    width: 100%;
   }
-  .icon {
-    height: 50%;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    &.chapel-icon {
-      background-image: url('../img/chapel.svg');
-    }
-    &.meal-points-icon {
-      background-image: url('../img/silverware.svg');
-    }
+  info-module,
+  .column {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
