--- a/scss/_configuration.scss
+++ b/scss/_configuration.scss
@@ -15,6 +15,8 @@
     padding-left: 10px;
   }
   .goco-checkbox {
+    width: 100%;
+    height: 100%;
     position: relative;
     display: inline-block;
     padding: ($checkbox-height / 4) ($checkbox-width / 4);
@@ -27,8 +29,7 @@
       color: $text-color;
       font-size: 30px;
       position: absolute;
-      top: 33%;
-      left: 25%;
+      left: 0;
       display: table;
       width: ($checkbox-width / 2);
       height: ($checkbox-width / 4) - 1;
