--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,7 @@
 $gordon-blue: #014983;
 $meal-points-orange: #F2A42C;
 $meal-points-per-day: #9650BF;
+$days-left-in-semester: #58F5A7;
 $text-color: #fff;
 $muted-gray: #838C8D;
 
@@ -13,6 +14,9 @@ $muted-gray: #838C8D;
 }
 .meal-points-per-day {
   background-color: $meal-points-per-day;
+}
+.days-left-in-semester {
+  background-color: $days-left-in-semester;
 }
 
 @font-face {
