--- a/scss/_infomodule.scss
+++ b/scss/_infomodule.scss
@@ -71,6 +71,9 @@ info-module {
     .icon {
       height: 15vh;
     }
+    .info-label {
+      font-size: 4.75vh;
+    }
     .info-number {
       font-size: 10vh;
     }
@@ -82,6 +85,10 @@ info-module {
     height: 25%;
     .icon {
       height: 13vh;
+    }
+    .info-label {
+      margin-top: 15px;
+      font-size: 4vh;
     }
     .info-number {
       margin-top: 30px;
@@ -102,6 +109,7 @@ info-module {
       font-size: 6vh;
     }
     .info-label {
+      margin-top: 0;
       font-size: 5vh;
     }
     .info-error-message {
@@ -112,9 +120,6 @@ info-module {
   &.list-item {
     .icon {
       margin-top: 10px;
-    }
-    .info-label {
-      margin-top: 0;
     }
     .module-left {
       width: 40%;
