--- a/scss/_configuration.scss
+++ b/scss/_configuration.scss
@@ -1,5 +1,4 @@
 .configuration-modal {
-  top: 400px;
   .item-checkbox .item-content {
     background-color: inherit;
   }
@@ -9,7 +8,7 @@
   }
   .item p.item-title {
     padding-left: 55px;
-    font-size: 20px;
+    font-size: 5vw;
   }
   .item-checkbox {
     padding-left: 10px;
