Add popup to explain configuration page on first time (resolves #24)

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -4,6 +4,12 @@
   @extend .fadeCycle;
 }
 
+.button-animated {
+  @extend .animated;
+  @extend .infinite;
+  @extend .moduleColorCycle;
+}
+
 // Only on grade a and grade b devices
 .grade-a,
 .grade-b {
