--- a/scss/app.scss
+++ b/scss/app.scss
@@ -72,6 +72,9 @@ body {
     top: 45vh;
   }
 }
+.button-animated {
+  color: $text-color;
+}
 .banner-content {
   padding: 15px;
   font-size: 1.2rem;
