--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -1,15 +1,15 @@
 .animated {
   -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+          animation-duration: 1s;
   -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+          animation-fill-mode: both;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
 }
 
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
 }
 
 // Loader animation (fade in and out)
@@ -33,74 +33,74 @@
 @-webkit-keyframes slideInLeft {
   0% {
     -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+            transform: translateX(-100%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 @keyframes slideInLeft {
   0% {
     -webkit-transform: translateX(-100%);
-    -ms-transform: translateX(-100%);
-    transform: translateX(-100%);
+        -ms-transform: translateX(-100%);
+            transform: translateX(-100%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 .slideInLeft {
   -webkit-animation-name: slideInLeft;
-  animation-name: slideInLeft;
+          animation-name: slideInLeft;
 }
 
 @-webkit-keyframes slideInRight {
   0% {
     -webkit-transform: translateX(100%);
-    transform: translateX(100%);
+            transform: translateX(100%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 @keyframes slideInRight {
   0% {
     -webkit-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    transform: translateX(100%);
+        -ms-transform: translateX(100%);
+            transform: translateX(100%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 
 .slideInRight {
   -webkit-animation-name: slideInRight;
-  animation-name: slideInRight;
+          animation-name: slideInRight;
 }
 
 @-webkit-keyframes zoomIn {
   0% {
     opacity: 0;
     -webkit-transform: scale3d(.3, .3, .3);
-    transform: scale3d(.3, .3, .3);
+            transform: scale3d(.3, .3, .3);
   }
 
   50% {
@@ -112,8 +112,8 @@
   0% {
     opacity: 0;
     -webkit-transform: scale3d(.3, .3, .3);
-    -ms-transform: scale3d(.3, .3, .3);
-    transform: scale3d(.3, .3, .3);
+        -ms-transform: scale3d(.3, .3, .3);
+            transform: scale3d(.3, .3, .3);
   }
 
   50% {
@@ -123,7 +123,7 @@
 
 .zoomIn {
   -webkit-animation-name: zoomIn;
-  animation-name: zoomIn;
+          animation-name: zoomIn;
 }
 
 @-webkit-keyframes zoomOut {
@@ -134,7 +134,7 @@
   50% {
     opacity: 0;
     -webkit-transform: scale3d(.3, .3, .3);
-    transform: scale3d(.3, .3, .3);
+            transform: scale3d(.3, .3, .3);
   }
 
   100% {
@@ -150,8 +150,8 @@
   50% {
     opacity: 0;
     -webkit-transform: scale3d(.3, .3, .3);
-    -ms-transform: scale3d(.3, .3, .3);
-    transform: scale3d(.3, .3, .3);
+        -ms-transform: scale3d(.3, .3, .3);
+            transform: scale3d(.3, .3, .3);
   }
 
   100% {
@@ -161,7 +161,7 @@
 
 .zoomOut {
   -webkit-animation-name: zoomOut;
-  animation-name: zoomOut;
+          animation-name: zoomOut;
 }
 
 @-webkit-keyframes fadeIn {
@@ -186,7 +186,7 @@
 
 .fadeIn {
   -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
+          animation-name: fadeIn;
 }
 
 @-webkit-keyframes fadeOut {
@@ -211,71 +211,108 @@
 
 .fadeOut {
   -webkit-animation-name: fadeOut;
-  animation-name: fadeOut;
+          animation-name: fadeOut;
 }
 
 @-webkit-keyframes slideInUp {
   0% {
     -webkit-transform: translateY(25%);
-    transform: translateY(25%);
+            transform: translateY(25%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateY(0);
-    transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
 @keyframes slideInUp {
   0% {
     -webkit-transform: translateY(25%);
-    -ms-transform: translateY(25%);
-    transform: translateY(25%);
+        -ms-transform: translateY(25%);
+            transform: translateY(25%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
 .slideInUp {
   -webkit-animation-name: slideInUp;
-  animation-name: slideInUp;
+          animation-name: slideInUp;
 }
 
 @-webkit-keyframes slideInDown {
   0% {
     -webkit-transform: translateY(-25%);
-    transform: translateY(-25%);
+            transform: translateY(-25%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateY(0);
-    transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
 @keyframes slideInDown {
   0% {
     -webkit-transform: translateY(-25%);
-    -ms-transform: translateY(-25%);
-    transform: translateY(-25%);
+        -ms-transform: translateY(-25%);
+            transform: translateY(-25%);
     visibility: visible;
   }
 
   100% {
     -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
 .slideInDown {
   -webkit-animation-name: slideInDown;
-  animation-name: slideInDown;
+          animation-name: slideInDown;
+}
+
+@-webkit-keyframes moduleColorCycle {
+  0%, 100% {
+    background-color: rgba($gordon-blue, 0.90);
+  }
+  25% {
+    background-color: rgba($meal-points-orange, 0.90);
+  }
+  50% {
+    background-color: rgba($meal-points-per-day, 0.90);
+  }
+  75% {
+    background-color: rgba($days-left-in-semester, 0.90);
+  }
+}
+
+@keyframes moduleColorCycle {
+  0%, 100% {
+    background-color: rgba($gordon-blue, 0.90);
+  }
+  25% {
+    background-color: rgba($meal-points-orange, 0.90);
+  }
+  50% {
+    background-color: rgba($meal-points-per-day, 0.90);
+  }
+  75% {
+    background-color: rgba($days-left-in-semester, 0.90);
+  }
+}
+
+.moduleColorCycle {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-name: moduleColorCycle;
+          animation-name: moduleColorCycle;
 }
