Fix banner (fixes #28)
- Change z-index to 11 to show over content
- Add has-footer class to ion-content when banner exists to push content
up to make space for banner
- Decrease font size in modules to fit better when banner exists

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -80,6 +80,9 @@ body {
   font-size: 1.2rem;
   line-height: 1.5rem;
 }
+app-banner > ion-footer-bar.bar {
+  z-index: 11;
+}
 // Override bar-header height change in iOS modal
 .platform-ios.platform-cordova:not(.fullscreen) {
   .modal {
