Refactor app color palette
- Rename colors to describe what they look like, not what they are for
- Store colors in a SASS map
- Create color classes dynamically using @each based on the colors map
- Move all variables to _variables.scss
- Update module configuration to use new color classes
- Fix module styles so colors don't have to be duplicated in .button
- Update infoModule directive to apply color class

--- a/scss/_configuration.scss
+++ b/scss/_configuration.scss
@@ -1,13 +1,10 @@
-$configuration-item-height: 20px;
-$configuration-item-height-big: 40px;
-
 .configuration-modal {
   .item-checkbox .item-content {
     background-color: inherit;
   }
   .item p.item-title,
   .item-reorder .button.icon {
-    color: $text-color;
+    color: color(white);
   }
   .item p.item-title {
     padding-left: 55px;
@@ -35,7 +32,7 @@ $configuration-item-height-big: 40px;
     }
     &.ion-checkmark:before,
     &.ion-close:before {
-      color: $text-color;
+      color: color(white);
       font-size: 30px;
       position: absolute;
       left: 0;
