--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -31,7 +31,7 @@
       margin-top: 2rem;
       font-size: 1.2rem;
       font-family: sans-serif;
-      color: $text-color;
+      color: color(white);
     }
     .login-errors {
       margin-left: 1rem;
