--- a/scss/_infomodule.scss
+++ b/scss/_infomodule.scss
@@ -48,6 +48,9 @@ info-module {
   .info-number {
     font-size: 20vh;
   }
+  .data-small .info-number {
+    font-size: 10vh;
+  }
   .info-label {
     margin-top: 15px;
   }
@@ -58,6 +61,9 @@ info-module {
     }
     .info-number {
       font-size: 15vh;
+    }
+    .data-small .info-number {
+      font-size: 11vh;
     }
   }
   &.one-third {
@@ -71,6 +77,9 @@ info-module {
     }
     .info-number {
       font-size: 10vh;
+    }
+    .data-small .info-number {
+      font-size: 9vh;
     }
     .info-error-message {
       font-size: 5.5vh;
@@ -102,6 +111,10 @@ info-module {
     .info-number {
       margin-top: 10px;
       font-size: 6vh;
+    }
+    .data-small .info-number {
+      font-size: 5.5vh;
+      line-height: 6.5vh;
     }
     .info-label {
       margin: 0;
