--- a/scss/app.scss
+++ b/scss/app.scss
@@ -97,8 +97,10 @@ a:visited {
 
 @import "keyframes";
 @import "animations";
+
 @import "configuration";
 @import "home";
 @import "infomodule";
 @import "login";
+@import "postlogin";
 @import "utility";
