--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,10 @@ $colors: (
   orange: #F2A42C,
   purple: #9650BF,
   mint-green: #58F5A7,
-  light-red: #F2726D
+  light-red: #F2726D,
+  dark-green: #24A552,
+  dark-red: #A51914,
+  dark-yellow: #FFBB00
 );
 
 $configuration-item-height: 20px;
