Add temperature module (resolves #10)

--- a/scss/_infomodule.scss
+++ b/scss/_infomodule.scss
@@ -37,6 +37,9 @@ info-module {
     &.person-icon {
       background-image: url('../img/person.svg');
     }
+    &.thermometer-icon {
+      background-image: url('../img/thermometer.svg');
+    }
   }
   .column {
     float: left;
