--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $colors: (
-  white: #fff,
+  white: #FFF,
   muted-gray: #838C8D,
   blue: #014983,
   orange: #F2A42C,
@@ -8,7 +8,8 @@ $colors: (
   light-red: #F2726D,
   dark-green: #24A552,
   dark-red: #A51914,
-  dark-yellow: #FFBB00
+  dark-yellow: #FFBB00,
+  light-teal: #46DBD3
 );
 
 $configuration-item-height: 20px;
