--- a/scss/_infomodule.scss
+++ b/scss/_infomodule.scss
@@ -94,13 +94,29 @@ info-module {
       height: 13vh;
     }
   }
-  &.list-item {
+  &.one-fifth {
     height: 20%;
     .icon {
       height: 11vh;
     }
   }
   &.one-fourth,
+  &.one-fifth {
+    .info-error-message {
+      font-size: 4.5vh;
+    }
+  }
+  &.list-item {
+    height: 17.5%;
+    .icon {
+      height: 10vh;
+    }
+    .info-error-message {
+      font-size: 3.75vh;
+    }
+  }
+  &.one-fourth,
+  &.one-fifth,
   &.list-item {
     .module-content {
       @extend .center;
@@ -122,9 +138,6 @@ info-module {
     .info-label {
       margin: 0;
       font-size: 4vh;
-    }
-    .info-error-message {
-      font-size: 4.5vh;
     }
   }
 }
