--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -1,10 +1,11 @@
 .login-content {
   .gordon-chapel {
     @extend .horizontal-center;
-    width: 30vw;
+    width: 30vmin;
     margin-top: 2.5vh;
   }
   .login-title {
+    font-size: 9vmin;
     margin-top: 0;
     text-align: center;
   }
