Add login page styles and fix error styles
- Remove styles forcing login errors to take up space when hidden
- Add styles to center loading indicator in submit button
- Add stlyes for invalid text

--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -35,14 +35,19 @@
       text-align: left;
       font-weight: 500;
       color: red;
-      &.ng-hide {
-        visibility: hidden;
-        display: block !important;
-      }
     }
     .login-button {
       @extend .horizontal-center;
       width: 75%;
+      .loading-indicator {
+        @extend .center;
+      }
+    }
+  }
+  &.status-invalid {
+    .invalid-text {
+      font-weight: 800;
+      color: color(dark-yellow);
     }
   }
 }
