Force .horizontal-center transform to override any other transforms
When an animation is applied on an element, it applies an empty transform
that initiates the 3D renderer for performance, but also overrides other
transforms.

--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -26,5 +26,5 @@
 .horizontal-center {
   position: relative;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) !important;
 }
