Change Ionic lib SCSS import to relative path to fix SASS error

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -28,5 +28,5 @@ $modal-inset-mode-left: 10%;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "../www/lib/ionic/scss/ionic";
 @import "app.scss";
