Add new colors for interaction modules

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,7 +10,11 @@ $colors: (
   dark-green: #24A552,
   dark-red: #A51914,
   dark-yellow: #FFBB00,
-  light-teal: #46DBD3
+  light-teal: #46DBD3,
+  dark-aquamarine: #245D66,
+  light-aquamarine: #6CB2A7,
+  light-purple: #BF87BF,
+  light-yellow: #FFE68E
 );
 
 $configuration-item-height: 20px;
